# AdbAutoPlayer

./: .pre-commit-config.yaml  README.md  cli.spec  gui.spec  pyproject.toml
.github/workflows/: release.yml
_references/: README.md
adb_auto_player/: adb.py  eel_functions.py  eel_main.py  exceptions.py  logging_setup.py  main.py  plugin.py  plugin_loader.py  screen_utils.py  update_manager.py
adb_auto_player/frontend/src/: app.d.ts  app.html
adb_auto_player/frontend/src/routes/: +layout.svelte  +page.svelte  ConfigForm.svelte
adb_auto_player/plugins/: example_run.py
adb_auto_player/plugins/AFKJourney/: config.toml  run.py
adb_auto_player/plugins/GOGOMuffin/: config.toml  run.py
docs/src/: SUMMARY.md  introduction.md  supported-games.md
docs/src/games/: afk-journey.md
docs/src/user-guide/: macos-setup.md  troubleshoot.md  windows-setup.md
frontend/src/: types.ts
frontend/src/lib/: model.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/ConfigForm/: ConfigForm.svelte  ImageCheckbox.svelte  MultiCheckbox.svelte
frontend/src/routes/Menu/: ActionButton.svelte  Menu.svelte  TooltipButton.svelte
frontend/src/routes/SelfUpdater/: DownloadIconSticky.svelte  DownloadModal.svelte
internal/ipc/: game_gui.go
python/adb_auto_player/: adb.py  command.py  game.py  main.py
python/adb_auto_player/games/afk_journey/: AFKJourney.toml  config.py  main.py
python/adb_auto_player/games/infinity_nikki/: main.py
python/adb_auto_player/ipc/: game_gui.py
python/tests/: test_game.py
(+5 files in other folders)
