[tool.poetry]
name = "adb-auto-player"
version = "0.0.0"
description = ""
authors = ["yulesxoxo <https://github.com/yulesxoxo/yulesxoxo>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pillow = "^11.0.0"
adbutils = "^2.8.0"
opencv-python = "^4.10.0.84"
eel = "^0.18.1"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pre-commit = "^4.0.1"
flake8 = "^7.1.1"
mypy = "^1.13.0"
pyinstaller = "^6.11.1"
types-requests = "^2.32.0.20241016"

[tool.black]
line-length = 88
target-version = ['py312']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
